--- a/vorstellung/presentation.tex
+++ b/vorstellung/presentation.tex
@@ -103,7 +103,7 @@
 %	TITLE PAGE
 % ----------------------------------------------------------------------------------------
 
-\title[]{Projekt 1a: Die Projektvorstellung} % The short title appears at the bottom of every slide, the full title is only on the title page
+\title[]{Projekt 1a: Zwischenbericht} % The short title appears at the bottom of every slide, the full title is only on the title page
 
 \author{Isabell Albrecht, Erik Engelhardt, Oliver Kochan, Florian Steffens} % Your name
 \institute[HAW] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
@@ -150,49 +150,31 @@
 %	PRESENTATION SLIDES
 % ----------------------------------------------------------------------------------------
 
-\section{Anforderungen}
+\section{Software}
 % - zusammenfassen der Puntke aus Vorlage
 % - eingrenzung Messbereiche
-\subsection{Anforderungen aus Pflichtenheft}
+\subsection{Fertig}
 \begin{frame}
-  \frametitle{Anforderungen aus Pflichtenheft 1/2}
-  \emph{Datenerfassung}
+  \frametitle{Software - Fertig}
   \begin{itemize}
-  	\item \emph{Temperatur über mind. 2 Sensoren}
-  	\item \emph{Luftdruck}
-  	\item \emph{Luftfeuchtigkeit}
-  	\item \emph{Höhe über NN}
-  	\item \emph{Windrichtung}\\
-  \end{itemize}
-\end{frame}
-\begin{frame}
-  \frametitle{Anforderungen aus Pflichtenheft 2/2}
-  \emph{Weitere Anforderungen}
-  \begin{itemize}
-  
-  	\item \emph{Versorgung über Solarenergie}
-  	\item \emph{Akkupufferung}
-  	\item \emph{Erfassung des Akku-Zustands (Spannung und Strom)}
-  	\item \emph{Nachgeführte Solarenergie}
-  	\item \emph{Automatische Ausrichtung des Solarpanels}
-  	\item \emph{Positionsbestimmung}
-  	\item \emph{Datenspeicherung auf einer microSD-Karte}
-  	\item \emph{Drahtlose Kommunikation mit einem PC}
-  	
+  	\item \emph{Grundgerüst Software}
+  	\item \emph{Sensoren - Abfragen}
+  	\item \emph{Sensoren - Einlesen}
+  	\item \emph{Sensoren - Zusammenführen}
+  	\item \emph{Sleep Modus}
+  	\item \emph{Steuerung Solarzelle}
   	
   \end{itemize}
 \end{frame}
-\subsection{Abgeleitete Anforderungen}
+\subsection{Ausstehend}
 \begin{frame}
-  \frametitle{Abgeleitete Anforderungen}
-  \emph{Zusätzlich ergibt sich:}
+  \frametitle{Software - Ausstehend}
   \begin{itemize}
-  	\item \emph{Temperaturerfassung von -60 bis 60\ °C}
-  	\item \emph{Luftfeuchtigkeit von 0 bis 100\ \%}
-  	\item \emph{Luftdruck von 1070 (Totes Meer) bis 325.4\ hPa (Mount Everest)}
-  	\item \emph{Wassergeschützter Aufbau}
-  	\item \emph{Energiesparender Messaufbau (Sleep Mode)}
-  \end{itemize}
+  	\item \emph{Speichern der Messdaten auf SD-Karte}
+  	\item \emph{Kommunikation mittels Bluetooth}
+  	\item \emph{Testen der Software (nach Zusammenbau)}
+  	\item \emph{Test- bzw. Vorführmodus}
+   \end{itemize}
 \end{frame}
 %\section{Konzept} %keine Ahnung, was ich hier schreiben soll :)
 % - Blockschaltbild
@@ -201,216 +183,64 @@
   %\emph{Diese Wetterstation wird sehr gut.}
  
 %\end{frame}
-\section{Umsetzung}
+\section{Elektronik}
 % - Sensoren kurz vorstellen und Bezug auf Anforderungen nehmen
 \begin{frame}
-  \frametitle{Sensoren}
-  \subsection{Sensoren}
-        \emph{Bosch Sensortec }\href{https://www.bosch-sensortec.com/bst/products/all_products/bme280}{\textbf{BME280}}
-        \begin{itemize}
-            \item \emph{Luftdruck-, Luftfeuchte- und Temperatursensor}
-           	\item \emph{Luftdruck von 300 bis 1100\ hPa}
-           	\item \emph{Temperatur von -40 bis 60\ °C}
-           	\item \emph{Luftfeuchtigkeit von 0 bis 100\ \%}
-           	\item \emph{Arbeitsbereich von -40 bis 85\ °C}
-         \end{itemize}
-         \begin{figure}
-         	\flushright         
-         	\includegraphics[width=0.5\linewidth]{img/BME280.png}
-         \end{figure}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Sensoren}
-	\emph{Honeywell} \href{https://www.sparkfun.com/datasheets/Components/HMC6352.pdf}{\textbf{HMC6352}}
-	\begin{itemize}
-		\item \emph{Magnetometer mit DSP-ASIC}
-		\item \emph{Arbeitsbereich von -20 bis 70\ °C}
-		\item \emph{Ausrichtung der Wetterstation}
-		\end{itemize}
-	\begin{figure}
-         	\flushright         
-         	\includegraphics[width=0.5\linewidth]{img/HMC6352.png}
-    \end{figure}
-\end{frame}
- 
-\begin{frame}
-	\frametitle{Sensoren}
-	\emph{ST Microelectronics} \href{https://www.st.com/en/mems-and-sensors/lis3dh.html}{\textbf{LIS3DH}}
-	\begin{itemize}
-		\item  \emph{MEMS-Accelerometer und Temperatursensor}
-		\item  \emph{Mess- und Arbeitsbereich von -40 bis 85\ °C}
-		\item \emph{Ausrichtung des Solarpanels}
-	\end{itemize}
-
-	\emph{Allegro} \href{https://www.allegromicro.com/en/products/sense/current-sensor-ics/zero-to-fifty-amp-integrated-conductor-sensor-ics/acs712}{\textbf{ACS712}}
-	\begin{itemize}
-		\item \emph{Halleffekt-Stromsensor}
-		\item \emph{Bestimmung des Ladezustands des Bleiakkus}
-	\end{itemize}
-	\begin{figure}
-         	\flushright         
-         	\includegraphics[width=0.5\linewidth]{img/ACS712.jpg}
-    \end{figure}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Sensoren}
-    \emph{Sparkfun} \href{https://www.sparkfun.com/products/8942}{\textbf{SEN-08942}}
-    \begin{itemize}           
-            \item \emph{Anemometer, Windfahne und Niederschlagssensor}
-            \item \emph{einfachere Implementierung als vorgegebener Sensor}
-    \end{itemize}
-    \begin{figure}
-         	\flushright         
-         	\includegraphics[width=0.5\linewidth]{img/SEN-08942.jpg}
-    \end{figure}
-\end{frame}
-
-\begin{frame}
-    \frametitle{Kommunikation und Leistungselektronik}
-    \subsection{Kommunikation, LE}
-        \emph{SkyTraq \href{}{\textbf{Venus600 series}}}
-        \begin{itemize}
-        	\item \emph{GPS Empfänger-ASIC}
-        	\item \emph{Standort- und Uhrzeitbestimmung}
-        	\item \emph{Zusammen mit Accelerometer und Kompassmodul Ausrichtung des Solarpanels}
-        \end{itemize}
-        \emph{``no-name'' \textbf{HC-05}}
-        \begin{itemize}
-            \item \emph{Serial-over-Bluetooth Schnittstellenumsetzer}
-            \item \emph{Kommikation mit Display (optional)}
-        \end{itemize}
-        \emph{ST Microelectronics \href{https://www.st.com/en/motor-drivers/l293e.html}{\textbf{L293E}}: Motortreiber} \\
-        \emph{IVT \textbf{200007}: MPPT Laderegler}
-\end{frame}
-
-\begin{frame}
-\frametitle{Energieversorgung}
-    \subsection{Versorgung}
-        Autarke Energieversorgung:
-        \begin{itemize}
-            \item \emph{Sygonix \textbf{SY-VRU214-4}: Solarmodul}
-            \item\emph{``no-name'' Blei-Säure Sekundärzelle}
-        \end{itemize}
-        \begin{figure}
-    \centering
-    \begin{minipage}[t]{0.45\linewidth}
-        \centering
-        \includegraphics[width=\linewidth]{img/SY-VRU214-4.png}
-    \end{minipage}% <- sonst wird hier ein Leerzeichen eingefügt
-    \hfill
-    \begin{minipage}[t]{0.45\linewidth}
-        \centering
-        \includegraphics[width=\linewidth]{img/Bleiakku.jpg}
-    \end{minipage}
-    \end{figure}
-\end{frame}
-\begin{frame}
-\frametitle{Mikrocontroller}
-\subsection{Mikrocontroller}
-\emph{ST Microelectronics }\href{https://www.bosch-sensortec.com/bst/products/all_products/bme280}{\textbf{STM8L152R8}}
-\begin{itemize}
-    \item \emph{8-Bit (mod.) Harvard-Architektur}
-    \item \emph{ADC, RTC, USART, I\textsuperscript{2}C, SPI, Timer}
-    \item \emph{4-Kanal DMA Controller}
-    \item \emph{Wait-For-Event Sleep Mode}
-    \item \emph{Einfache Konfiguration, geringe Energieaufnahme}
-\end{itemize}
-\begin{figure}
-    \flushright         
-    \includegraphics[width=0.5\linewidth]{img/STM8-Nucleo-Board.jpg}
-\end{figure}
-\end{frame}
-\begin{frame}
-\frametitle{Systemübersicht}
-    \subsection{Aufbau}
-        \includegraphics[width=\textwidth]{img/BSB_Uebersicht.pdf}
-\end{frame}
-
-\begin{frame}
-\frametitle{Gehäuse}
+  \frametitle{Elektronik - Fertig}
+  \subsection{Fertig}
         
-        \emph{Idee:}
         \begin{itemize}
-        	\item \emph{Gehäuse für Elektronik mittels 3D-Druck}
-        	\item \emph{Überzug mit Bügelfolie}
-        	\item \emph{Abdichtung der Ein- und Ausgänge}
+            \item \emph{Spannungsversorgung}
+            \item \emph{Schaltplan}
+            \item \emph{Platinenlayout}
+            \item \emph{Test der Motoren}
+         \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Elektronik - Ausstehend}
+    \subsection{Ausstehend}
+        \begin{itemize}
+        	\item \emph{Aufbau der Platine}
+        	\item \emph{Verkabelung der Sensoren}
+        	\item \emph{Kabelmanagement}
         \end{itemize}
-        \begin{figure}
-        	\flushright
-        	\includegraphics[width=0.3\textwidth]{img/Wetterstation_1.png}
-        \end{figure}
 \end{frame}
-
-\section{Erfüllung der Anforderungen}
+    
+\section{Aufbau}
 \begin{frame}
-	\frametitle{Erfüllung der Anforderungen 1/2}
-	\emph{Erfüllt}
+	\frametitle{Aufbaue - Fertig}
+	\subsection{Fertig}
 	\begin{itemize}
-		\item \emph{sämtliche Messwerte mit Sensoren abgedeckt}
-		\item \emph{zusätzlicher Niederschlagssensor}
-		\item \emph{Versorgung über ausgerichtetes Solarpanel}
-		\item \emph{Pufferung des Ladeszustands}
-		\item \emph{Positions- und Höhenbestimmung mittels GPS Modul}
-		\item \emph{Datenspeicherung auf microSD}
-		\item \emph{Kommunikation mittels Bluetooth}
+		\item \emph{Planung}
+		\item \emph{Stabilität des Solarmoduls}
+		\item \emph{3D-Druck - Halterung für Sensoren}
 	\end{itemize}
 \end{frame}
 
 \begin{frame}
-	\frametitle{Erfüllung der Anforderungen 2/2}
-	\emph{Eingrenzungen}
+	\frametitle{Aufbau - Ausstehend}
+	\subsection{Ausstehend}
 	\begin{itemize}
-		\item \emph{Arbeitsbereiche der Sensoren von -20 bis 60\ °C}
-		\item \emph{Begrenzung des Standorts durch Solarpanel}
+		\item \emph{Montage - Halterungen}
+		\item \emph{Montage - Sensoren}
+		\item \emph{Montage - Kabel}
+		\item \emph{Montage - Gehäuse (Platine)}
+		\item \emph{Montage - Spannungsversorgung}
+		\item \emph{3D-Druck - Gehäuse}
 	\end{itemize}
 \end{frame}
 
-\section{Planung}
+\section{Zeitplan}
 % - groben Zeitplan vorstellen (Diagramm)
 
 \begin{frame}
-  \frametitle{Aufgaben 1/2}
-  \emph{Abgeschlossen:}
+  \frametitle{Zeitplan}
   \begin{itemize}
-  	\item \emph{Planung der Umsetzung}
-  	\item \emph{Erstellung der Aufgabenpakete}
-  	\item \emph{Bestellen der Teile} %wird Montag eingereicht
+  	\item \emph{Planung ist vollständig abgeschlossen}
+  	\item \emph{Fortführung nach Ankunft der Platine}
+  	\item \emph{Dokumentation blablabla} %wird Montag eingereicht
   \end{itemize}
-  \emph{In Arbeit:}
-  \begin{itemize}
-  	\item \emph{Entwurf der Spannungsversorgung}
-  	\item \emph{Auswertung der Datenblätter}
-  	\item \emph{Grundgerüst der Software}
-   \end{itemize} 
-\end{frame}
-
-\begin{frame}
-  \frametitle{Aufgaben 2/2}
-  \emph{Ausstehend:}
-  \begin{itemize}
-  	\item \emph{Ausrichtung des Solarpanels}
-  	\item \emph{Layout Platine}
-  	\item \emph{Auslesen der Sensoren}
-  	\item \emph{Speichern der Messdaten}
-  	\item \emph{Kommunikation mittels Bluetooth}
-  	\item \emph{Anzeige auf PC (GUI)}
-  	\item \emph{Montage}
-  	\item \emph{Gehäuse und Abdichtung}
-  	\item \emph{Bericht}
-  \end{itemize}  
-\end{frame}
-
-\begin{frame}
-    \frametitle{Zeitplan}
-    \includegraphics[width=\textwidth]{img/Zeitplan.pdf}
-\end{frame}
-
-\begin{frame}
-    \begin{center}
-    	\Huge {\emph{Fragen?}}
-    \end{center}
 \end{frame}
 
 % ------------------------------------------------
