--- a/vorstellung/presentation.tex
+++ b/vorstellung/presentation.tex
@@ -157,31 +157,28 @@
 \begin{frame}
   \frametitle{Software - Fertig}
   \begin{itemize}
-  	\item \emph{Grundgerüst Software}
-  	\item \emph{Sensoren - Abfragen}
-  	\item \emph{Sensoren - Einlesen}
-  	\item \emph{Sensoren - Zusammenführen}
-  	\item \emph{Sleep Modus}
-  	\item \emph{Steuerung Solarzelle}
-  	
+  	\item \emph{Grundgerüst}
+    \item \emph{Ansteuerung I2C, SPI, UART, ADC, RTC}
+  	\item \emph{Einlesen und Umrechnen der Sensordaten}
+    \item \emph{Lageregelung}
+  	\item \emph{Auswertung NMEA-Sentences vom GPS-Modul}
+    \item \emph{Berechnung von Azimut und Elevation}      
+    \item \emph{Kommunikation über Bluetooth}
+    \item \emph{Externe Bibliothek für FAT32-Dateisystem}
+    \item \emph{Energiesparmaßnahmen}
   \end{itemize}
 \end{frame}
 \subsection{Ausstehend}
 \begin{frame}
   \frametitle{Software - Ausstehend}
   \begin{itemize}
-  	\item \emph{Speichern der Messdaten auf SD-Karte}
-  	\item \emph{Kommunikation mittels Bluetooth}
-  	\item \emph{Testen der Software (nach Zusammenbau)}
-  	\item \emph{Test- bzw. Vorführmodus}
+    \item \emph{Zeitgesteuerte Nachführung des Panels}
+  	\item \emph{Bluetooth: AT command set; Demo-Mode}
+    \item \emph{Visualisierungssoftware auf einem PC}
+    \item \emph{Speichern der Sensordaten auf der SD-Karte}
    \end{itemize}
 \end{frame}
-%\section{Konzept} %keine Ahnung, was ich hier schreiben soll :)
-% - Blockschaltbild
-%\begin{frame}
-  %\frametitle{Folie 1}
-  %\emph{Diese Wetterstation wird sehr gut.}
- 
+
 %\end{frame}
 \section{Elektronik}
 % - Sensoren kurz vorstellen und Bezug auf Anforderungen nehmen
