--- a/vorstellung/literature.bib
+++ b/vorstellung/literature.bib
@@ -14,3 +14,22 @@
   url = 	 {https://de.wikipedia.org/wiki/Temperaturextrema#H%C3%B6chsttemperaturen_(seit_Beginn_der_Aufzeichnungen)},
   note = 	 {Zugriff: 12.10.2019},
 }
+@article{Nou2016,
+author = {Nou, Julien and Chauvin, Rémi and Thil, Stéphane and Grieu, Stéphane},
+year = {2016},
+month = {03},
+pages = {},
+title = {A new approach to the real-time assessment of the clear-sky direct normal irradiance},
+volume = {40},
+journal = {Applied Mathematical Modelling},
+doi = {10.1016/j.apm.2016.03.022}
+}
+
+@Article{Roderick1992,
+  author = 	 {Roderick, M.L.},
+  title = 	 {Methods for calculating solar position and day length including computer programs and subroutines},
+  journal = 	 {Resource Management Technical Reports},
+  year = 	 {1992},
+  url = {https://researchlibrary.agric.wa.gov.au/cgi/viewcontent.cgi?article=1122&context=rmtr},
+  note = {Zugriff: 17.10.2019}
+}
