--- a/vorstellung/presentation.tex
+++ b/vorstellung/presentation.tex
@@ -269,7 +269,7 @@
   \begin{itemize}
   \item \emph{Planung ist vollständig abgeschlossen}
   \item \emph{Fortführung nach Ankunft der Platine}
-  \item \emph{Dokumentation blablabla} %wird Montag eingereicht
+  \item \emph{Dokumentation teilweise begonnen} %wird Montag eingereicht
   \end{itemize}
 \end{frame}
 \begin{frame}[allowframebreaks]
