--- a/vorstellung/presentation.tex
+++ b/vorstellung/presentation.tex
@@ -156,14 +156,15 @@
 % - zusammenfassen der Puntke aus Vorlage - eingrenzung Messbereiche
 \subsection{Fertig}
 \begin{frame}
-  \frametitle{Software - Fertig}
+  \frametitle{Software}
+  \framesubtitle{Entwicklungsstand}
   \begin{itemize}
   \item \emph{Grundgerüst}
   \item \emph{Ansteuerung I2C, SPI, UART, ADC, RTC}
   \item \emph{Einlesen und Umrechnen der Sensordaten}
-  \item \emph{Lageregelung}
+  \item \emph{Berechnung der Sonnenposition}
   \item \emph{Auswertung NMEA-Sentences vom GPS-Modul}
-  \item \emph{Berechnung von Azimut und Elevation}
+  \item \emph{Motorsteuerung, Lageregelung}
   \item \emph{Kommunikation über Bluetooth}
   \item \emph{Externe Bibliothek für FAT32-Dateisystem}
   \item \emph{Energiesparmaßnahmen}
@@ -171,7 +172,8 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Berechnung der Sonnenposition}
+  \frametitle{Software}
+  \framesubtitle{Berechnung der Sonnenposition}
   \begin{itemize}
   \item Berechnung von Zenith und Azimut
   \item Implementierung nach \citet[]{Roderick1992}
@@ -184,7 +186,8 @@
   \end{figure}
 \end{frame}
 \begin{frame}
-  \frametitle{Berechnung der Sonnenposition (Beispiel)}
+  \frametitle{Software}
+  \framesubtitle{Berechnung der Sonnenposition (Beispiel)}
   \begin{itemize}
   \item Hamburg, 26.11.2019, 9:30h
   \item Zenith = 81.1°
@@ -199,7 +202,8 @@
 \end{frame}
 \subsection{Ausstehend}
 \begin{frame}
-  \frametitle{Software - Ausstehend}
+  \frametitle{Software}
+  \framesubtitle{Ausstehende Entwicklungsaufgaben}
   \begin{itemize}
   \item \emph{Zeitgesteuerte Nachführung des Panels}
   \item \emph{Bluetooth: AT command set; Demo-Mode}
@@ -212,30 +216,33 @@
 \section{Elektronik}
 % - Sensoren kurz vorstellen und Bezug auf Anforderungen nehmen
 \begin{frame}
-  \frametitle{Elektronik - Fertig}
+  \frametitle{Elektronik}
+  \framesubtitle{Abgeschlossene Aufgaben}
   \subsection{Fertig}
         
   \begin{itemize}
-  \item \emph{Spannungsversorgung}
-  \item \emph{Schaltplan}
+  \item \emph{Planung der Spannungsversorgung}
+  \item \emph{Entwurf des Schaltplans}
   \item \emph{Platinenlayout}
   \item \emph{Test der Motoren}
   \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Elektronik - Ausstehend}
+  \frametitle{Elektronik}
+  \framesubtitle{Ausstehende Aufgaben}
   \subsection{Ausstehend}
   \begin{itemize}
-  \item \emph{Aufbau der Platine}
-  \item \emph{Verkabelung der Sensoren}
+  \item \emph{Fertigung und Bestückung der Platine}
+  \item \emph{Anschluss der Sensoren}
   \item \emph{Kabelmanagement}
   \end{itemize}
 \end{frame}
     
 \section{Aufbau}
 \begin{frame}
-  \frametitle{Aufbaue - Fertig}
+  \frametitle{Aufbau}
+  \framesubtitle{Abgeschlossene Aufgaben}
   \subsection{Fertig}
   \begin{itemize}
   \item \emph{Planung}
@@ -249,7 +256,8 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Aufbau - Ausstehend}
+  \frametitle{Aufbau}
+  \framesubtitle{Ausstehende Aufgaben}
   \subsection{Ausstehend}
   \begin{itemize}
   \item \emph{Montage - Halterungen}
@@ -266,11 +274,7 @@
 
 \begin{frame}
   \frametitle{Zeitplan}
-  \begin{itemize}
-  \item \emph{Planung ist vollständig abgeschlossen}
-  \item \emph{Fortführung nach Ankunft der Platine}
-  \item \emph{Dokumentation teilweise begonnen} %wird Montag eingereicht
-  \end{itemize}
+  \includegraphics[width=\textwidth]{img/Zeitplan.pdf}
 \end{frame}
 \begin{frame}[allowframebreaks]
   \frametitle{Literatur- und Quellenverzeichnis}
